@@ -89,6 +89,9 @@ monitor mode.
 .B PCAP_ERROR_IFACE_NOT_UP
 The capture source device is not up.
 .TP
+.B PCAP_ERROR_CAPTURE_NOTSUP
+Packet capture is not supported on the capture source.
+.TP
 .B PCAP_ERROR
 Another error occurred.
 .BR pcap_geterr ()
@@ -101,8 +104,9 @@ as an argument to fetch or display a message describing the error.
 If
 .BR PCAP_WARNING_PROMISC_NOTSUP ,
 .BR PCAP_ERROR_NO_SUCH_DEVICE ,
+.BR PCAP_ERROR_PERM_DENIED ,
 or
-.B PCAP_ERROR_PERM_DENIED
+.B PCAP_ERROR_CAPTURE_NOTSUP
 is returned,
 .BR pcap_geterr ()
 or
