@@ -72,6 +72,13 @@ DayOfTheWeek, Month DD, YYYY / The Tcpdump Group
       Fix internal handling of "not supported" error codes from NPF.
       Work around a bug in Npcap 1.00 in case of driver version mismatch.
       Don't call WSACleanup() when handling a failed WSAStartup().
+   BSD, macOS, AIX, Solaris 11, Linux:
+      Add a new error PCAP_ERROR_CAPTURE_NOTSUP, for use if a capture
+        mechanism is not present, in the hopes that, for example,
+        attempts to capture on Windows Services for Linux 1, in which
+        the NT kernel attempts to simulate Linux system calls but does
+        not support packet sockets, can get an error that better
+        indicates the underlying problem.
     AirPcap:
       Format an error message if we run out of memory.
     nflog:
